# Turnitout

./: .env.example  .gitattributes  .gitignore  AI_PROMPT_GUIDE.md  ARCHITECTURE_RULES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  LaTeX Citation Counter.py  README.md  SUPPORT.md  TODO.md  add_missing_citations.py  analyze_topics.bat  analyze_topics.py  clean_bib.py  debug_citations.py  dublicate_refernces_finder.py  fix_citations.py  pyproject.toml  run.bat  run.py  run.sh  similarity_evasion_analysis.md  todo.md  verify_citations.py
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Mathematics-thesis/: main.tex  references.bib
configs/: math_thesis.json
core/: modifier.py  rules.py
docs/: architecture.md  changelog.md  getting-started.md  roadmap.md  technical-decisions.md
paper_config/: __init__.py  math_thesis.py
rules/: appositives.json  conceptual_bridges.json  conjunctions.json  contractions.json  determiners.json  discourse_markers.json  filler_words.json  general_academic_topics.json  hedge_words.json  passive_verbs.json  phrases.json  protected_terms.json  synonyms.json  transition_phrases.json  verb_noun_pairs.json
src/turnitout/: __init__.py  cli.py  config.py
src/turnitout/core/: __init__.py  generator.py  modifier.py  parser.py  rules.py  utils.py
src/turnitout/core/transformers/: __init__.py  advanced.py  ai_evasion.py  base.py  lexical.py  (+3 more)
tests/: test_modifier.py  test_parser.py  test_rules.py
